<resources>
    <string name="app_name">Happyride</string>

    <string name="navigation_drawer_open">Öppna drawer</string>
    <string name="navigation_drawer_close">Stäng drawer</string>

    <string name="title_bar_home">Förstasidan</string>
    <string name="title_bar_forum">Forum</string>
    <string name="title_bar_kos">Köp &amp; Sälj</string>
    <string name="title_bar_saved">Sparade annonser</string>
    <string name="title_bar_my_ads">Mina annonser</string>
    <string name="title_bar_shops">Butiker</string>
    <string name="title_bar_videos">Video</string>
    <string name="title_bar_articles">Artiklar</string>
    <string name="title_bar_calendar">Kalender</string>
	<string name="title_bar_settings">Inställningar</string>

    <string name="thread_not_logged_in">Ej inloggad</string>
    <string name="thread_page">Sida:&#160;</string>
    <string name="thread_by">&#160;av&#160;</string>
    <string name="thread_one">1</string>
    <string name="thread_offline">Offline</string>
    <string name="thread_new">ny</string>
    <string name="thread_download_error">Trådarna gick inte att hämta</string>
    <string name="thread_error_mark_as_read">Trådarna kunde inte markeras som lästa</string>

    <string name="thread_reply">Svara</string>

    <string name="kos_page">Sida</string>
    <string name="kos_by">av</string>
    <string name="kos_one">1</string>

    <string name="removed">Annonsen borttagen</string>
    <string name="saved_content_hint">Klicka på hjärt-ikonen för att\nSpara annonser</string>

    <string name="video_page">Sida:&#160;</string>
    <string name="video_by">&#160;av&#160;</string>
    <string name="video_one">1</string>

    <string name="main_home">Förstasidan</string>
    <string name="main_forum">Forum</string>
    <string name="main_articles">Artiklar</string>
    <string name="main_kos">Köp &amp; Sälj</string>
    <string name="main_video">Video</string>
    <string name="main_shops">Butiker</string>
    <string name="main_calendar">Kalender</string>
    <string name="main_settings">Inställningar</string>
    
    <string name="collapse">Dra ihop</string>
    <string name="expand">Expandera</string>
    <string name="error">Något gick fel</string>
    <string name="error_loading_image">Bilden gick inte att hämta</string>
    <string name="error_server">Servern kan inte nås</string>
    <string name="no_network">Datatrafik saknas</string>
    <string name="no_items_found">Inga objekt hittades</string>
    <string name="kos_no_items_found">Inga annonser hittades</string>
    <string name="articles_no_items_found">Artiklarna gick inte att hämta</string>
    <string name="shops_no_items_found">Butikerna gick inte att hämta</string>
    <string name="calendar_no_items_found">Kalendern gick inte att hämta</string>
    <string name="messages_not_found">Kunde inte hämta meddelanden</string>
    <string name="OK">OK</string>
    <string name="open">Öppna</string>
    <string name="search">Sök</string>
    <string name="sort">Sortera</string>
    <string name="cancel">Avbryt</string>
    <string name="enter_page_number">Välj sidnummer: (1 - %1$d)</string>
    <string name="goto_page">Öppna sida</string>
    <string name="error_message">Felmeddelande</string>
    <string name="not_logged_in">Ej inloggad</string>
    <string name="logged_in_as">"Inloggad som "</string>
    <string name="remove">Ta bort</string>
    <string name="reload">Ladda om</string>

    <string name="all_regions">Hela Sverige</string>
    <string name="all_categories">Alla Kategorier</string>
    <string name="all_prices">Alla Priser</string>
    <string name="all_years">Alla Årsmodeller</string>
    <string name="share">Dela annons…</string>
    <string name="unable_to_update">Annonsen kunde inte uppdateras</string>
    <string name="unable_to_save">Annonsen kunde inte sparas</string>
    <string name="updating_search">Uppdaterar sökning...</string>
    <string name="delete_sold">Radera sålda</string>

</resources>
