<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/grey">	

	<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/messageframe"
    	android:layout_width="fill_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1" />		

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@color/black"
		android:padding="3dp"
		android:baselineAligned="false">		
			
		<LinearLayout
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="left">	
		    			
			<ImageView
				android:id="@+id/message_login_status_image"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:src="@drawable/ic_offline"
			    android:contentDescription="@string/thread_offline"/>					
		
			<TextView
				android:id="@+id/message_login_status"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/thread_not_logged_in"
				android:textSize="13sp"
				android:textColor="@color/white"
				android:layout_gravity="center_vertical"/>
		</LinearLayout>
	
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="right">
			
			<TextView
			    android:id="@+id/message_page_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/thread_page"
				android:textSize="13sp"
				android:textColor="@color/white"
				android:layout_gravity="center_vertical"/>
				
			<TextView
				android:id="@+id/message_current_page"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/thread_one"
				android:textSize="13sp"
				android:textColor="@color/white"
				android:layout_gravity="center_vertical"/>				
	
			<TextView
			    android:id="@+id/message_by_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/thread_by"
				android:textSize="13sp"
				android:textColor="@color/white"
				android:layout_gravity="center_vertical"/>	
				
			<TextView
				android:id="@+id/message_no_of_pages"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/thread_one"					
				android:textSize="13sp"
				android:textColor="@color/white"
				android:layout_gravity="center_vertical"/>
		</LinearLayout>	
	</LinearLayout>
</LinearLayout>