<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<FrameLayout
			android:id="@+id/list_container_id"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/empty_id"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center" />

			<android.support.v4.widget.SwipeRefreshLayout
				android:id="@+id/activity_main_swipe_refresh_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">


				<ListView
					android:id="@android:id/list"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:drawSelectorOnTop="false" />

			</android.support.v4.widget.SwipeRefreshLayout>
		</FrameLayout>
		<LinearLayout
			android:id="@+id/progress_container_id"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical"
			android:visibility="visible">

			<ProgressBar
				style="?android:attr/progressBarStyleLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</FrameLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@color/black"
		android:padding="3dp"
		android:baselineAligned="false">		
								
		<LinearLayout
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:orientation="horizontal"
		    android:gravity="center_vertical|left">
	             
			<ImageView
				android:id="@+id/thread_login_status_image"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:src="@drawable/ic_offline"
			    android:contentDescription="@string/thread_offline"/>					
		
			<TextView
				android:id="@+id/thread_login_status"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/thread_not_logged_in"
				android:textSize="15sp"
				android:textColor="@color/white"
				android:layout_gravity="center_vertical"/>
		</LinearLayout>
	
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="right">
		
		 	<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/thread_page"
				android:textSize="15sp"
				android:textColor="@color/white"
				android:layout_gravity="center_vertical"/>
				
			<TextView
				android:id="@+id/thread_current_page"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/thread_one"
				android:textSize="15sp"
				android:textColor="@color/white"
				android:layout_gravity="center_vertical"/>				
		
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/thread_by"
				android:textSize="15sp"
				android:textColor="@color/white"
				android:layout_gravity="center_vertical"/>	
				
			<TextView
				android:id="@+id/thread_no_of_pages"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/thread_one"					
				android:textSize="15sp"
				android:textColor="@color/white"
				android:layout_gravity="center_vertical"/>
		</LinearLayout>

	</LinearLayout>
</LinearLayout>