<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/kos_bottombar"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_light"
    android:visibility="gone"
    android:layout_gravity="bottom"
    tools:showIn="@layout/kos_frame">

    <ImageButton
        android:id="@+id/kos_prev"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/bottombar_selector"
        app:srcCompat="@drawable/ic_action_previous"
        android:tint="@color/grey_dark_tint"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/kos_page_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/kos_page"
            android:visibility="gone"
            style="@style/bottomBarTextStyle"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/kos_current_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/kos_page_text"
            android:text="@string/kos_one"
            style="@style/bottomBarPageTextStyle"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/kos_by_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/kos_page_text"
            android:layout_toRightOf="@id/kos_current_page"
            android:layout_alignBaseline="@id/kos_current_page"
            android:text="@string/kos_by"
            android:padding="4dp"
            style="@style/bottomBarTextStyle"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/kos_no_of_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kos_one"
            android:padding="0dp"
            android:layout_below="@id/kos_page_text"
            android:layout_toRightOf="@id/kos_by_text"
            android:layout_alignBaseline="@id/kos_by_text"
            style="@style/bottomBarPageTextStyle"
            android:layout_gravity="center_vertical" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/kos_next"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/bottombar_selector"
        app:srcCompat="@drawable/ic_action_next"
        android:tint="@color/grey_dark_tint" />

</LinearLayout>