<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

		<FrameLayout
			android:id="@+id/list_container_id"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/empty_id"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center" />

			<android.support.v4.widget.SwipeRefreshLayout
				android:id="@+id/activity_main_swipe_refresh_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">


				<ListView
					android:id="@android:id/list"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:drawSelectorOnTop="false" />

			</android.support.v4.widget.SwipeRefreshLayout>
		</FrameLayout>
		<LinearLayout
			android:id="@+id/progress_container_id"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical"
			android:visibility="visible">

			<ProgressBar
				style="?android:attr/progressBarStyleLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</FrameLayout>

    <LinearLayout
        android:id="@+id/kos_bottombar"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/kos_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/bottomBarTextStyle"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/kos_region"
            android:text="Region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/bottomBarTextStyle"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/kos_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kategori"
                style="@style/bottomBarTextStyle"
                android:gravity="left"
                android:layout_weight="1"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/kos_page_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kos_page"
                    style="@style/bottomBarTextStyle"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/kos_current_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kos_one"
                    style="@style/bottomBarTextStyle"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/kos_by_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kos_by"
                    style="@style/bottomBarTextStyle"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/kos_no_of_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kos_one"
                    style="@style/bottomBarTextStyle"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>